--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -7,6 +7,9 @@ services:
     command: sh -lc "php-fpm"
 
   vite:
+    build:
+      context: .
+      dockerfile: docker/dev.Dockerfile
     working_dir: /var/www/html
     volumes:
       - ./:/var/www/html:delegated
@@ -22,3 +25,4 @@ services:
         condition: service_started
       mysql:
         condition: service_started
+    networks: [appnet]
